fixed alignment

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ a {
   color: white;
   cursor: pointer;
 }
+body {
+  background-color: var(--baseColor);
+  margin-bottom: 20px;
+}
 button {
   cursor: pointer;
 }
@@ -69,7 +73,6 @@ button {
   line-height: 32px;
   color: #bd86e6;
   margin: 10px 0;
-  transform: translateX(-15px);
 }
 .main {
   display: flex;
@@ -151,7 +154,11 @@ button {
     align-self: center;
   }
   .SubTitle {
-    left: 30%;
+    top: 0%;
+    color: white;
+    left: 2%;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
   }
   .headerPart2 {
     display: flex;
@@ -161,13 +168,14 @@ button {
   .contact {
     padding: 10px;
     width: 100%;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
   }
   .headerPart2h1 {
     margin: 10px 0;
+    
   }
   .main {
     margin-top: 300px;
@@ -180,6 +188,8 @@ button {
   }
   .WhatsappButton {
     width: 100%;
+    font-size: 1rem;
+    padding: 0px 40px;
     margin-bottom: 10px;
   }
   .mainContent {
